[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Screens/Play.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Roboto_Medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/test_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Time.gd" type="Script" id=4]
[ext_resource path="res://Images/UI/grid8.png" type="Texture" id=5]
[ext_resource path="res://Scenes/EnemyGrid.gd" type="Script" id=6]
[ext_resource path="res://Scenes/PlayerGrid.tscn" type="PackedScene" id=7]

[node name="Play" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ScorePanel" type="Panel" parent="."]
margin_left = 158.584
margin_top = 47.2759
margin_right = 725.584
margin_bottom = 265.276

[node name="VBoxContainer" type="VBoxContainer" parent="ScorePanel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="YourScore" type="Label" parent="ScorePanel/VBoxContainer"]
margin_right = 198.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "You: 0"

[node name="EnemyScore" type="Label" parent="ScorePanel/VBoxContainer"]
margin_top = 79.0
margin_right = 198.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 2 )
text = "Enemy: 0"

[node name="Time" type="Label" parent="."]
margin_left = 826.992
margin_top = 147.376
margin_right = 907.992
margin_bottom = 233.376
custom_fonts/font = ExtResource( 3 )
text = "10"
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="EnemyGrid" type="TextureRect" parent="."]
margin_left = 1090.43
margin_top = 261.521
margin_right = 1858.43
margin_bottom = 1029.52
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="PlayerGrid" parent="." instance=ExtResource( 7 )]
margin_left = 266.732
margin_top = 456.634
margin_right = 1034.73
margin_bottom = 1224.63
rect_scale = Vector2( 0.75, 0.75 )

[node name="Confirm" type="Button" parent="."]
margin_left = 1269.1
margin_top = 49.8682
margin_right = 1638.1
margin_bottom = 177.868
custom_fonts/font = ExtResource( 3 )
text = "Confirm"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
